[metadata]
name = pumpkin-grapher
version = 0.0.3

description = Use pumpkin.py graph files to extract interesting information
url = https://github.com/pumpkin-py/pumpkin-dump-tool

author = sinus-x

[options]
package_dir =
	=.
packages = find:
python_requires = >3.8.0
install_requires =
	pygal
	cairosvg


[options.entry_points]
console_scripts =
	pumpkin-grapher = grapher:main
